force-app/main/default/objects/OM_and_Rent_Roll__c/OM_and_Rent_Roll__c.object-meta.xml
<CustomObject>
    <label>OM and Rent Roll</label>
    <nameField>
        <displayFormat>OM RR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OM and Rent Rolls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>