force-app/main/default/objects/OM_and_Rent_Roll__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Building</label>
    <referenceTo>Building__c</referenceTo>
    <relationshipLabel>OM and Rent Rolls</relationshipLabel>
    <relationshipName>OM_and_Rent_Rolls</relationshipName>
    <type>Lookup</type>
</CustomField>