force-app/main/default/objects/OM_and_Rent_Roll__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rent Roll</fullName>
            </value>
            <value>
                <fullName>OM</fullName>
            </value>
            <value>
                <fullName>Stacking Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>